# openllm-ocr-annotator

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  conftest.py  justfile  pyproject.toml  requirements.txt  zensical.toml
apps/: app.py  evaluate.py  sampling_evaluate.py  streamlit_viewer.py
config/: model_api.yaml
configs/: config.yaml
configs/annotators/: foreign_trade_default.yaml
configs/dataset/: foreign_trade.yaml
configs/ensemble/: weighted_vote.yaml
configs/task/: foreign_trade.yaml
demo/: index.html
docs/: architecture.md  architecture.zh.md  index.md
examples/: config.yaml  prompt_templates.yaml
pipeline/: run_annotation.py
scripts/: generate_demo.py
src/: __init__.py
src/openllm_ocr_annotator/: __init__.py
src/openllm_ocr_annotator/annotators/: base.py  claude_annotator.py  curator_annotator.py  gemini_annotator.py  grok_annotator.py  litellm_annotator.py  mistral_annotator.py  openai.py  openai_annotator.py  qwen_annotator.py
src/openllm_ocr_annotator/config/: __init__.py  config_manager.py  model_api.yaml  prompt_templates.yaml
src/openllm_ocr_annotator/demo/: index.html
src/openllm_ocr_annotator/evaluators/: base.py  field_evaluator.py  sampling_evaluator.py
src/openllm_ocr_annotator/pipeline/: __init__.py  annotator_processor.py  curator_processor.py  image_dataset.py  parallel_processor.py  run_annotation.py
src/openllm_ocr_annotator/utils/: __init__.py  dataset_converter.py  field_matcher.py  file_utils.py  formatter.py  logger.py  prompt_manager.py  retry.py  visualizer.py
src/openllm_ocr_annotator/voters/: __init__.py  base.py  majority.py  manager.py  weighted.py
tests/: conftest.py
tests/annotators/: test_claude_annotator.py  test_curator_annotator.py  test_grok_annotator.py  test_litellm_annotator.py  test_mistral_annotator.py  test_qwen_annotator.py
tests/config/: test_config_manager.py
tests/pipeline/: test_annotator_processor.py  test_curator_processor.py  test_image_dataset.py  test_run_annotation.py
tests/utils/: prompt_manager_test.py  test_dataset_converter.py  test_field_matcher.py  test_formatter.py  test_prompt_manager.py
tests/voters/: test_majority_voter.py  test_voting_manager.py  test_weighted_voter.py
utils/: dataset_converter.py  field_matcher.py  file_utils.py  formatter.py  io.py  logger.py  prompt_manager.py  retry.py  visualizer.py
