[project]
name = "openllm-ocr-annotator"
version = "0.1.0"
description = "Multimodal OCR annotation tool using multiple LLM APIs."
readme = "README.md"
requires-python = ">=3.13.2"
license = "MIT"
authors = [
  { name = "Loong Ma", email = "diqiuzhuanzhuan@gmail.com" }
]
dependencies = [
  "openai",
  "requests",
  "pillow",
  "pyyaml",
  "tqdm"
]

[project.urls]
homepage = "https://github.com/diqiuzhuanzhuan/openllm-ocr-annotator"
repository = "https://github.com/diqiuzhuanzhuan/openllm-ocr-annotator"

[tool.uv]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
