[project]
name = "openllm-ocr-annotator"
version = "0.1.0"
description = "Multimodal OCR annotation tool using multiple LLM APIs."
readme = "README.md"
requires-python = ">=3.13.2"
license = "MIT"
authors = [
  { name = "Loong Ma", email = "diqiuzhuanzhuan@gmail.com" }
]
dependencies = [
  "openai>=1.0.0,<2.0.0",
  "requests",
  "pillow",
  "pyyaml",
  "tqdm",
  "anthropic",
  "google-genai",
  "qwenai",
  "mistralai",
  "datasets",
  "colorlog",
  "pandas",
  "pre-commit>=4.2.0",
  "streamlit>=1.45.1",
  "litellm>=1.67.0",
  "httpx[socks]>=0.28.1",
]

[project.urls]
homepage = "https://github.com/diqiuzhuanzhuan/openllm-ocr-annotator"
repository = "https://github.com/diqiuzhuanzhuan/openllm-ocr-annotator"

[tool.uv]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.12",
]

[tool.ruff]
target-version = "py313"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
