[project]
name = "openllm-ocr-annotator"
version = "0.1.0"
description = "Multimodal OCR annotation tool using multiple LLM APIs."
readme = "README.md"
requires-python = ">=3.13.2"
license = "MIT"
authors = [
  { name = "Loong Ma", email = "diqiuzhuanzhuan@gmail.com" }
]
dependencies = [
  "openai>=2.20.0,<3.0.0",
  "requests",
  "pillow",
  "pyyaml",
  "tqdm",
  "datasets",
  "colorlog",
  "pandas",
  "pre-commit>=4.2.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.45.1",
  "litellm==1.83.7",
  "httpx[socks]>=0.28.1",
  "bespokelabs-curator>=0.1.18.post1",
]

[project.urls]
homepage = "https://github.com/diqiuzhuanzhuan/openllm-ocr-annotator"
repository = "https://github.com/diqiuzhuanzhuan/openllm-ocr-annotator"

[tool.uv]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.12",
    "zensical>=0.0.37",
]

[tool.ruff]
target-version = "py313"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
